@@ -1,7 +1,8 @@
-# $Id: JobManagerCommandHandler.properties,v 1.5 2004/05/20 14:08:59 zubov Exp $
+# $Id: JobManagerCommandHandler.properties,v 1.6 2004/07/09 17:08:38 zubov Exp $
 addjob.usage=USAGE: <file> <priority> <timestomirror> <destslave> [destslave ...]
 addjob.success=Job ${job} was added to the list
-listjob=${count,4}. ${job}
+listjobwaiting=${count,4}. ${job}
+listjobrunning=${count,4}. ${job} speed=${speed} progress=${progress}/${total}
 removejob.usage=USAGE: <file>
 removejob.fail=Unable to remove a job with filename ${filename}
 removejob.success=Removed job ${job}
